dont need the bulk file

--- a/human-protein-preprocessing/get-ppi-from-pathwaycommons.ipynb
+++ b/human-protein-preprocessing/get-ppi-from-pathwaycommons.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "binary_ppi_bulk.to_csv('binary-ppi-bulk.csv', index=False)"
+    "# binary_ppi_bulk.to_csv('binary-ppi-bulk.csv', index=False)"
    ]
   },
   {
