fix union ppi + generate training samples code

--- a/human-protein-preprocessing/generate_union_ppi.ipynb
+++ b/human-protein-preprocessing/generate_union_ppi.ipynb
@@ -7,7 +7,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -284,7 +285,7 @@
     }
    ],
    "source": [
-    "mapped_ids_reviewed = pd.read_csv('mapped_ids_reviewed.csv', sep='\\t')\n",
+    "mapped_ids_reviewed = pd.read_csv('processed-data/mapped_ids_reviewed.csv', sep='\\t')\n",
     "mapped_ids_reviewed.head()"
    ]
   },
@@ -486,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "b3c13a0b",
    "metadata": {},
    "outputs": [],
@@ -497,15 +498,31 @@
     "    1: pathway_commons[2],  # Second column\n",
     "    2: [0.75] * len(pathway_commons),  # Placeholder for column 3\n",
     "    3: ['U'] * len(pathway_commons)   # Placeholder for column 4\n",
-    "})\n",
-    "\n",
-    "# Concatenate the new rows to the existing DataFrame\n",
-    "updated_ppi = pd.concat([initial_ppi, new_rows], ignore_index=True)"
+    "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
+   "id": "d96b4887",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to replace CHEBI entries efficiently\n",
+    "def replace_chebi(value):\n",
+    "    if isinstance(value, str) and value.startswith(\"CHEBI:\"):\n",
+    "        match = re.match(r\"CHEBI:\\s*(\\d+)\", value)\n",
+    "        if match:\n",
+    "            return f\"chebi:{match.group(1)}\"\n",
+    "    return value\n",
+    "\n",
+    "# Apply function to the entire DataFrame\n",
+    "new_rows = new_rows.applymap(replace_chebi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "9063f034",
    "metadata": {},
    "outputs": [
@@ -585,18 +602,20 @@
        "4  A4GAT_HUMAN   ALG5_HUMAN  0.75  U"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Concatenate the new rows to the existing DataFrame\n",
+    "updated_ppi = pd.concat([initial_ppi, new_rows], ignore_index=True)\n",
     "new_rows.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "85626057",
    "metadata": {},
    "outputs": [
@@ -676,7 +695,7 @@
        "4  TACC1_HUMAN   LSM7_HUMAN  0.714823  U"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,12 +706,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "id": "a9a0f9e1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "updated_ppi.to_csv('union_ppi.txt', sep='\\t', header=None, index=False)"
+    "updated_ppi.to_csv('processed-data/union_ppi.txt', sep='\\t', header=None, index=False)"
    ]
   },
   {
