--- a/human-protein-preprocessing/generate_individual_training_sample.ipynb
+++ b/human-protein-preprocessing/generate_individual_training_sample.ipynb
@@ -228,6 +228,22 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe831aed",
+   "metadata": {},
+   "source": [
+    "### run through all individual pathways in folder and generate samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37f0c374",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "id": "333ede8f",
    "metadata": {},
    "source": [
